--- a/css/footer.css
+++ b/css/footer.css
@@ -1,11 +1,11 @@
 footer{
 	background-color:aliceblue;
 	height:auto;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 .fa-facebook {
   background: #3B5998;
   color: white;
-
 }
 .fa-twitter {
   background: #55ACEE;
@@ -19,12 +19,10 @@ footer{
   background: #ff5700;
   color: white;
 }
-ul {	
-    list-style-type:none;
+ul {
+    list-style: url(/images/);
 	
 }
-
-
 
 
 
