--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,23 @@
+/*Fan_change_log
+1. font update
+2. Background image layout
+3. about us image size adjust to screen
+*/
+
 body {
-	margin:0;
-	width:100vw;
-	background-image: url(/images/Hoth_plains.jpg);
+    position: relative;
+    background-color: white;
+    margin: 0;
+    
+    /*Fan_start---Background image style*/
+    background: url(../images/Hoth_plains.jpg) no-repeat center top fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+    
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    /*Fan_end---Background image style*/
 }
 
 #cart {
@@ -12,24 +28,30 @@ body {
     text-align: center;
     padding:0px;
 }
+
 #appetizers {
     padding: 100px 25px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 #desserts {
     padding: 100px 25px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 #drinks {
     padding: 100px 25px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 #meals {
     padding: 100px 25px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 #about{
 	padding: 100px 25px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .imgs {
@@ -40,11 +62,15 @@ body {
     background-repeat: no-repeat;
 }
 
+/*Fan_start------------------------------------------------*/
+/*fix about us pic size*/
 #imghoth{
-	background-size:contain;
-	width:100%;
+    max-width:100%;
+    max-height:100%;
 }
-#about-right{
-	background-color:azure;
-	padding:2vw 2vh 2vw 2vh;
+
+.menu_icon {
+    
+    height: 150px;
+    width: 150px;
 }
