--- a/css/navigation.css
+++ b/css/navigation.css
@@ -1,15 +1,32 @@
+/*Fan_change_log
+1. color theme change
+2. button hover behavior change
+3. nav-bar style
+*/
+
 #navigation {
-    background-color: #0ABAB5;
+    /*background-color: #0ABAB5;*/
+    /*Fan_start------------------------------------------------*/
+    background-color: #24292e;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    /*Fan_end------------------------------------------------*/
+    
+    
 }
 
 #title {
-    font-weight: bolder;
-    color: #DD1D22;
+    /*
+    color: #DD1D22;*/
+    /*Fan_start------------------------------------------------*/
+    font-weight: normal;
+    color: #fff;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    /*Fan_end------------------------------------------------*/
 }
 
 #logo {
     width: 5vw;
-    background-image: url(/images/Rebel-48.png);
+    background-image: url(/images/Rebel-51.png);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -20,11 +37,53 @@
     transform: rotateY(360deg);
 }
 
+/*Fan_start------------------------------------------------*/
 .nav {
     color: white;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+#myNavbar li a{
+    padding-top: 10px;
+    text-shadow: none;
+    
 }
 
 .navbar .active a {
-    color: #0ABAB5;
-    background-color: #FDF8FF;
+    color: #fff;
 }
+
+/*Fan - fix color scheme and behavior for nav bar*/
+#appetizer_link:hover {
+    background-color: #24292e;
+    color: #fff;
+}
+
+#dessert_link:hover {
+    background-color: #24292e;
+    color: #fff;
+}
+
+#drink_link:hover {
+    background-color: #24292e;
+    color: #fff;
+
+}
+
+#meal_link:hover {
+    background-color: #24292e;
+    color: #fff;
+}
+
+#about_link:hover {
+    background-color: #24292e;
+    color: #fff;
+}
+
+
+#login:hover {
+    background-color: #24292e;
+    color: #fff;
+}
+/*Fan_end------------------------------------------------*/
