Changed navbar a link colors and added rough template in kitchen
Signed-off-by: a-mori <almoriex@gmail.com>

--- a/css/main.css
+++ b/css/main.css
@@ -62,8 +62,10 @@ body {
     background-repeat: no-repeat;
 }
 
-/*Fan_start------------------------------------------------*/
-/*fix about us pic size*/
+.icon-bar {
+    background-color: white;
+}
+
 #imghoth{
     max-width:100%;
     max-height:100%;
