--- a/css/admin.css
+++ b/css/admin.css
@@ -22,12 +22,12 @@ body{
 }
 
 #close{
-position:absolute;
-right:3vw
-top:3vh;
-cursor: pointer;
-max-height:3vh;
-max-width: 3vw;
+    position:absolute;
+    right:3vw;
+    top:3vh;
+    cursor: pointer;
+    max-height:3vh;
+    max-width: 3vw;
 }
 
 #admin-div{
