--- a/css/navigation.css
+++ b/css/navigation.css
@@ -10,8 +10,6 @@
     background-color: #24292e;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     /*Fan_end------------------------------------------------*/
-    
-    
 }
 
 #title {
@@ -47,43 +45,18 @@
 #myNavbar li a{
     padding-top: 10px;
     text-shadow: none;
-    
+    color: grey;
 }
 
 .navbar .active a {
-    color: #fff;
+    color: #fff !important;
 }
 
 /*Fan - fix color scheme and behavior for nav bar*/
-#appetizer_link:hover {
+#appetizer_link:hover, #dessert_link:hover, #drink_link:hover, #meal_link:hover, #about_link:hover, #login:hover, #logout_link:hover, #profile_link:hover {
+    text-decoration: none;
     background-color: #24292e;
     color: #fff;
 }
 
-#dessert_link:hover {
-    background-color: #24292e;
-    color: #fff;
-}
-
-#drink_link:hover {
-    background-color: #24292e;
-    color: #fff;
-
-}
-
-#meal_link:hover {
-    background-color: #24292e;
-    color: #fff;
-}
-
-#about_link:hover {
-    background-color: #24292e;
-    color: #fff;
-}
-
-
-#login:hover {
-    background-color: #24292e;
-    color: #fff;
-}
 /*Fan_end------------------------------------------------*/
