--- a/css/admin.css
+++ b/css/admin.css
@@ -1,7 +1,12 @@
 body{
 	margin:0;
 	width:100vw;
-	background-image: url(/images/Hoth_plains.jpg);
+	background: url(../images/Hoth_plains.jpg) no-repeat center top fixed; 
+	-webkit-background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	background-size: cover;
+	 font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 .btn-glyphicon {
