--- a/css/main.css
+++ b/css/main.css
@@ -85,16 +85,16 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+label {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
 .imgs {
     width: 100%;
     height: 200px;
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
-}
-
-.icon-bar {
-    background-color: white;
 }
 
 #imghoth{
