--- a/css/admin.css
+++ b/css/admin.css
@@ -1,12 +1,53 @@
-body{
-	margin:0;
-	width:100vw;
-	background: url(../images/Hoth_plains.jpg) no-repeat center top fixed; 
+body {
+    position: relative;
+    background-color: white;
+    margin: 0;
+    background: url(/images/Hoth_plains.jpg) no-repeat center top fixed; 
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size: cover;
-	 font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+#appetizers, #desserts, #drinks, #meals, #about {
+    padding: 100px 25px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+.imgs {
+    width: 100%;
+    height: 200px;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+#imghoth{
+    max-width:100%;
+    max-height:100%;
+}
+
+.menu_icon {
+    
+    height: 150px;
+    width: 150px;
+}
+
+.item_img {
+    width:100%;
+}
+
+.item-container {
+    float:left;
+}
+
+.item_container:nth-child(3n+1) {
+    clear:left;
+}
+
+#teamhoth_txt {
+    border-bottom-style: solid;
 }
 
 .btn-glyphicon {
@@ -14,12 +55,14 @@ body{
     background:#ffffff;
     margin-right:4px;
 }
+
 .icon-btn {
     padding: 1px 15px 3px 2px;
     border-radius:50px;
 	
 	position:fixed;
 }
+
 #addbut{
 	position: fixed;
     bottom: 4vh;
