--- a/css/cart.css
+++ b/css/cart.css
@@ -1,73 +1,60 @@
-.item {
-    margin: 10px 0;
+#cart {
+    position: fixed;
+    background-color: rgba(150,150,150,0.5);
+    height: 88vh;
+    top: 60px;
+    z-index: 1;
+    right: 0;
 }
 
-.delete {
-    background-image: url(/images/button_cancel_256.png);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-size: contain;
-    height: 25px;
-    width: 25px;
-    cursor:pointer;
-    display:inline-block;
+#cart_link:hover {
+    background-color: #24292e;
+    color: white;
 }
 
-.delete:hover {
-    transform: scale(0.7);
+.cart_items {
+    height: 5%;
+    margin: 1vh;
+    background-color: grey;
+    padding: 0;
 }
 
-.text {
-    text-overflow: ellipsis;
-    font-size: 100%;
-    vertical-align: center;
-    overflow: hidden;
-    white-space: nowrap;
-    display:inline-block;
-}
-
-.price2 {
-    text-align: center;
-    font-size: 100%;
-    vertical-align: center;
-    line-height: 4vh;
-}
-
-#items {
-    height: 80vh;
-    overflow-x: hidden;
+#holder {
+    height: 90%;
     overflow-y: auto;
 }
 
-.qty2 {
-    background-color: #2F8DB3;
-    border: 1px solid #2F8DB3;
-    margin: 5px 5px 5px 0px;
-    color: #FFFFFF;
+.remove {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.qty2:hover {
-    background-color: #2257BF;
-    border: 1px solid #2257BF;
+.remove:hover {
+    color: white;
 }
 
-.add2 {
-    background-color: #333333;
-    border: 1px solid #333333;
-    color: #FDF8FF;
-    margin: 5px 5px 5px 0px;
+.item {
+    height: 100%;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.add2:hover {
-    background-color: black;
-    border: 1px solid black;
+.price {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 #checkout {
     background-color: #333333;
-    border: 1px solid #333333;
     color: #FDF8FF;
-    margin: 20px auto;
+    border: 1px solid #333333;
+    margin: 15px auto;
 }
 
 #checkout:hover {
