Almost complete main page. Only tweaks should be css.
Signed-off-by: a-mori <almoriex@gmail.com>

--- a/css/cart.css
+++ b/css/cart.css
@@ -41,6 +41,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    text-overflow: ellipse;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .price {
@@ -61,3 +64,11 @@
     background-color: black;
     border: 1px solid black;
 }
+
+@media (max-height: 550px) {
+    #cart {
+        position: absolute;
+        height: 500px;
+    }
+}
+
