--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 body {
-	position:center;
+    position: relative;
     background-color: white;
     margin: 0;
     background: url(/images/Hoth_plains.jpg) no-repeat center top fixed; 
@@ -10,6 +10,8 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+
+/*Panel stylizing start*/
 .panel {
     border: 1px solid black !important; 
     border-radius:0 !important;
@@ -18,6 +20,8 @@ body {
 .panel:hover {
     box-shadow: 5px 0px 40px rgba(0,0,0, .2);
 }
+/*Panel stylizing end*/
+
 
 /*Menu item div stuff start*/
 #appetizers, #desserts, #drinks, #meals, #about {
