--- a/css/food_item.css
+++ b/css/food_item.css
@@ -59,3 +59,10 @@
     background-color: black;
     border: 1px solid black;
 }
+
+.warning {
+    border:1px solid black;
+    text-align:center;
+    padding:15px;
+    background-color:rgba(0,200,255,0.5);
+}
