--- a/css/food_item.css
+++ b/css/food_item.css
@@ -60,9 +60,20 @@
     border: 1px solid black;
 }
 
-.warning {
+#warning {
     border:1px solid black;
     text-align:center;
     padding:15px;
-    background-color:rgba(0,200,255,0.5);
+    position:absolute;
+    background-color:rgb(0,200,255);
+    display:none;
+}
+
+#warning-container {
+    position:relative;
+    height:50px;
+    display:flex;
+    align-items:center;
+    justify-content:center;
+    pointer-events:none;
 }
