--- a/css/main.css
+++ b/css/main.css
@@ -69,8 +69,26 @@ body {
     border-radius: 0px !important;
 }
 
+.head {
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.foot {
+    height: 260px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
 .panel-footer h4 {
     color: #CCC;
+}
+
+h3 {
+    font-size: 10px;
 }
 
 .btn {
@@ -141,7 +159,7 @@ body {
 /*XS screen size*/
 @media (max-width: 600px) {
     #appetizers, #desserts, #drinks, #meals, #about {
-        padding: 100px 100px;
+        padding: 150px 100px;
     }
     
     .panel {
@@ -161,7 +179,7 @@ body {
 /*XS screen size*/
 @media (min-width: 601px) and (max-width: 767px) {
     #appetizers, #desserts, #drinks, #meals {
-        padding: 100px 200px;
+        padding: 150px 200px;
     }
     
     #about {
@@ -173,7 +191,7 @@ body {
 /*SM screen size*/
 @media (min-width: 768px) and (max-width: 991px) {
     #appetizers, #desserts, #drinks, #meals {
-        padding: 100px 150px;
+        padding: 150px 150px;
     }
     
     #about {
@@ -185,7 +203,7 @@ body {
 /*MD screen size*/
 @media (min-width: 992px) and (max-width: 1200px) {
     #appetizers, #desserts, #drinks, #meals {
-        padding: 100px 150px;
+        padding: 150px 150px;
     }
     
     #about {
@@ -197,6 +215,6 @@ body {
 /*LG screen size*/
 @media (min-width: 1201px) and (max-width: 1535px) {
     #appetizers, #desserts, #drinks, #meals, #about {
-        padding: 100px 40px;
+        padding: 150px 60px;
     }
 }
