--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,15 @@ body {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+#appetizers_holder, #desserts_holder, #drinks_holder, #meals_holder, #about {
+    padding-top: 100px;
+}
+
+#appetizers, #desserts, #drinks, #meals {
+    margin: 0 auto;
+    padding: 0;
+    display: inline-block;
+}
 
 /*Panel stylizing start*/
 .panel {
@@ -17,10 +26,12 @@ body {
     border-radius:0 !important;
     transition: box-shadow 0.5s;
 }
+
 .panel:hover {
     box-shadow: 5px 0px 40px rgba(0,0,0, .2);
 }
 /*Panel stylizing end*/
+
 
 /*Menu item stuff start*/
 .menu {
@@ -85,10 +96,12 @@ body {
 
 .panel-footer h4 {
     color: #CCC;
+    font-size: 110% !important;
+    margin: auto;
 }
 
 h3 {
-    font-size: 10px;
+    font-size: 130% !important;
 }
 
 .btn {
@@ -158,8 +171,8 @@ h3 {
 
 /*XS screen size*/
 @media (max-width: 600px) {
-    #appetizers, #desserts, #drinks, #meals, #about {
-        padding: 150px 100px;
+    #appetizers_holder, #desserts_holder, #drinks_holder, #meals_holder, #about {
+        padding: 100px 100px;
     }
     
     .panel {
@@ -178,8 +191,8 @@ h3 {
 
 /*XS screen size*/
 @media (min-width: 601px) and (max-width: 767px) {
-    #appetizers, #desserts, #drinks, #meals {
-        padding: 150px 200px;
+    #appetizers_holder, #desserts_holder, #drinks_holder, #meals_holder, #about {
+        padding: 100px 200px;
     }
     
     #about {
@@ -190,8 +203,8 @@ h3 {
 
 /*SM screen size*/
 @media (min-width: 768px) and (max-width: 991px) {
-    #appetizers, #desserts, #drinks, #meals {
-        padding: 150px 150px;
+    #appetizers_holder, #desserts_holder, #drinks_holder, #meals_holder, #about {
+        padding: 100px 150px;
     }
     
     #about {
@@ -202,8 +215,8 @@ h3 {
 
 /*MD screen size*/
 @media (min-width: 992px) and (max-width: 1200px) {
-    #appetizers, #desserts, #drinks, #meals {
-        padding: 150px 150px;
+    #appetizers_holder, #desserts_holder, #drinks_holder, #meals_holder, #about {
+        padding: 100px 150px;
     }
     
     #about {
@@ -214,7 +227,7 @@ h3 {
 
 /*LG screen size*/
 @media (min-width: 1201px) and (max-width: 1535px) {
-    #appetizers, #desserts, #drinks, #meals, #about {
-        padding: 150px 60px;
+    #appetizers_holder, #desserts_holder, #drinks_holder, #meals_holder, #about {
+        padding: 100px 60px;
     }
 }
