--- a/css/main.css
+++ b/css/main.css
@@ -17,13 +17,19 @@ body {
 #appetizers, #desserts, #drinks, #meals {
     margin: 0 auto;
     padding: 0;
-    display: inline-block;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-box;
+    display: flex;
+    justify-content: space-around;
+    flex-flow: row wrap;
 }
 
 /*Panel stylizing start*/
 .panel {
     border: 1px solid black !important; 
-    border-radius:0 !important;
+    border-radius: 0 !important;
     transition: box-shadow 0.5s;
 }
 
