--- a/css/kitchen.css
+++ b/css/kitchen.css
@@ -11,6 +11,10 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
+#order-status {
+    height:20px;
+}
+
 label {
     color: black;
     background-color: darkgray;
