--- a/css/admin.css
+++ b/css/admin.css
@@ -1,6 +1,6 @@
 body{
-	position:center;
 	margin:0;
+	position:relative;
 	background: url(../images/Hoth_plains.jpg) no-repeat center top fixed;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
@@ -9,9 +9,22 @@ body{
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
-#appetizers, #desserts, #drinks, #meals, #about {
-    padding: 100px 25px;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+#app-items, #dessert-items, #drink-items, #meal-items {
+    margin: 0 auto;
+    padding: 0;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-box;
+    display: flex;
+    justify-content: space-around;
+    flex-flow: row wrap;
+}
+#dessert-items{
+	padding-bottom: 50px;
+}
+#appetizers_holder, #desserts_holder, #drinks_holder, #meals_holder {
+    padding-top: 100px;
 }
 
 .imgs {
@@ -72,10 +85,6 @@ body{
     max-width: 3vw;
 }
 
-#admin-div{
-	margin-top:10vh;
-	height:auto;
-}
 
 /* message div */
 #price-updated{
@@ -88,11 +97,48 @@ body{
     transition: bottom 1s;
 }
 
-#picture-updated{
-    
+#picture-updated{    
     width:auto;
     text-align: center;
     display: none;
     
 
+}
+
+
+/*XS screen size*/
+@media (min-width: 601px) and (max-width: 767px) {
+    #appetizers_holder, #desserts_holder, #drinks_holder, #meals_holder{
+        padding: 100px 200px;
+    }
+    
+
+}
+
+
+/*SM screen size*/
+@media (min-width: 768px) and (max-width: 991px) {
+    #appetizers_holder, #desserts_holder, #drinks_holder, #meals_holder {
+        padding: 100px 150px;
+    }
+    
+
+}
+
+
+/*MD screen size*/
+@media (min-width: 992px) and (max-width: 1200px) {
+    #appetizers_holder, #desserts_holder, #drinks_holder, #meals_holder {
+        padding: 100px 150px;
+    }
+    
+
+}
+
+
+/*LG screen size*/
+@media (min-width: 1201px) and (max-width: 1535px) {
+    #appetizers_holder, #desserts_holder, #drinks_holder, #meals_holder {
+        padding: 100px 60px;
+    }
 }
