--- a/css/admin_user.css
+++ b/css/admin_user.css
@@ -1,25 +1,103 @@
-#shop_status_open{
-    font-size: 2vw;
-    
-    
-}
-
-#shop_status_close{
-    font-size:2vw;
+#shop_status{
+    font-size: 1vw;
+    font-weight: bold;
     
 }
 
-button{
-    font-size: 2vw;
+
+
+.button{
+    font-size: 1vw;
+    width:15vw;
+    margin: 1vh 1vw 1vh 0vw;
+    text-align: center;
+    overflow: hidden;
+    border-radius: 30px;
+    background-color: silver;
+    max-height: 25px;
+    
 }
+
+.button:focus {outline:0;}
 
 body{
     background-image: url(/images/Hoth_plains.jpg);
+
 }
 
 #container{
-        margin: 100px auto;
-    width: 50%;
+    margin: 100px auto;
+    width: 50vw;
     text-align: center;
-    
+    display: inline-block;
+    vertical-align: top;
+    max-height: 90vh;
+    overflow: auto;
+
 }
+#menu{
+    border-right: solid 1px;
+    border-right-color: aliceblue;
+    margin: 100px auto;
+    width:30vw;
+    text-align: center;
+    display: inline-block;
+    vertical-align: top;
+    height: 100vh;
+
+}
+
+
+.switch {
+  position: relative;
+
+  
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+}
+
+.switch input {display:none;}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: #2196F3;
+}
+
+input:focus + .slider {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+
+
+
