fixed orders.html, css other templates, updated readme

--- a/css/orders.css
+++ b/css/orders.css
@@ -3,7 +3,36 @@ body {
 	background-image: url(/images/Hoth_plains.jpg);
 }
 
+table {
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    width: 100%;
+	font-size:1.5em;
+}
+
+td{
+    border: 1px solid #dddddd;
+    text-align: left;
+}
+
+th {
+	background-color: dimgray;
+    color: white;
+    border: 2px solid #dddddd;
+    text-align: left;
+	padding-bottom: 20px;
+}
+
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
+
+tr:nth-child(odd) {
+    background-color: ghostwhite;
+}
+
 #order-display{
+	padding-left:3vw;
+	padding-right:3vw;
 	background-color:rgba(240,240,250,0.6);
 	border: 2px solid #333333;
     overflow-y: auto;
