--- a/css/food_item.css
+++ b/css/food_item.css
@@ -64,9 +64,13 @@
     border:1px solid black;
     text-align:center;
     padding:15px;
-    position:absolute;
+    position:fixed;
     background-color:rgb(0,200,255);
     display:none;
+    bottom: 0;
+    margin: 0 auto;
+    width: 80vw;
+    z-index: 99999999;
 }
 
 #warning-container {
