--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,10 @@ h3 {
     font-size: 130% !important;
 }
 
+h2 {
+    font-size: 1.4em !important;
+}
+
 .btn {
     background-color: #333333;
     color: #FDF8FF;
